test/es6/ModuleLateSyntaxErrors.baseline
thrown at script1.js:
^
SyntaxError: Module import fakebinding cannot be resolved
thrown at script2.js:
^
SyntaxError: Module import fakebinding cannot be resolved
thrown at script3.js:
^
SyntaxError: Module import default cannot be resolved
SyntaxError: Syntax error
	at module (:1:1)
SyntaxError: Syntax error
	at module (:1:1)
